# healthcare-policy-intelligence-copilot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: audit.py  config.py  evaluation.py  guardrails.py  main.py  prompts.py  rag.py  schemas.py  vector_store.py
backend/: Dockerfile
backend/app/: __init__.py  main.py
backend/app/api/: audit.py  evaluation.py  health.py  ingest.py  query.py
backend/app/core/: config.py  security.py
backend/app/prompts/: grounded_answer_prompt.py
backend/app/retrieval/: __init__.py  document_loader.py  retriever.py  vector_store.py
backend/app/services/: audit_service.py  evaluation_service.py  guardrail_service.py  rag_service.py
backend/tests/: conftest.py  test_audit.py  test_guardrails.py  test_ingestion.py  test_query_schema.py  test_retriever.py
data/synthetic_policy_docs/: case_management_continuity.md
diagrams/: architecture.mmd
docs/: api-design.md  api.md  architecture.md  deployment-guide.md  evaluation.md  rag-evaluation.md  security.md
docs/adr/: 0001-local-first-rag.md  0002-audit-without-sensitive-data.md  0003-role-aware-policy-answers.md
sample-data/: ai_compliance_controls_sample.md  appeals_medical_necessity_sample.md  claims_support_sample.md  prior_authorization_sample.md
scripts/: ingest_documents.py  run_evaluation.py
tests/: conftest.py  test_audit.py  test_guardrails.py  test_health.py  test_ingestion.py  test_query_schema.py
