[project]
name = "healthcare-policy-intelligence-copilot"
version = "0.1.0"
description = "Production-style Healthcare Claims and Policy RAG Copilot using synthetic policy documents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "langchain>=0.2.14",
    "langchain-community>=0.2.12",
    "langchain-text-splitters>=0.2.2",
    "chromadb>=0.5.5",
    "sentence-transformers>=3.0.1",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.5.7",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
